2/3/2011
	- The 'file' command in the 'update' program didn't work correctly.
	  (reported by Olafur Gudmundsson <ogud@ogud.com>)

9/15/2010
	- Change the Android name server detection mechanism to avoid false
	  positives. (patch from Ulf Dittmer <ulf@ulfdittmer.com>)

9/9/2010
	- The IXFR code didn't do serial number arithmetic correctly, and would
	  fail if the serial number wrapped.
	  (patch from Alexis MacFarlane <Alexis.MacFarlane@usc-bt.com>)

9/7/2010
	- 2.1.0 released

8/17/2010
	- When rendering a message, if records from the additional section did
	  not fit, the header counts were not properly updated.
	  (patch from Klaus Malorny <Klaus.Malorny@knipp.de>)

7/22/2010
	- Fix LOC record parsing to allow negative altitudes.
	  (based on a patch from William Kocik <wkocik@verisign.com>)

7/21/2010
	- The changes to TSIG verification in 2.0.6 didn't work correctly for
	  stream verification; specifically, the state was only set on the
	  first Message in the stream.
	  (reported by William Kocik <wkocik@verisign.com>)

5/12/2010
	- Add support for determining resolver configuration on
	  Japanese Windows.  (translation and original patch from
	  Brett Wooldridge <brettw@users.sourceforge.net>)

5/6/2010
	- Add support for building an OSGi bundle (patch from
	  Markus Alexander Kuppe <lemmster@users.sourceforge.net>).

5/2/2010
	- Rewrite DNSSEC support.

4/15/2010
	- Fix a hang that could occur when using the dnsjava service provider
	  on Windows (initial patch from <jy123@users.sourceforge.net>).

11/21/2009
	- 2.0.8 released

11/10/2009
	- Fix the conversion of NSEC/NSEC3 bitmaps into wire format.
	  (Klaus Malorny <Klaus.Malorny@knipp.de>, also reported by
	  Tom <808131@gmail.com>).

10/01/2009
	- Properly initialize the Date objects used in RRSIG (and other)
	  records, so that any unused fields are cleared.
	  (Klaus Malorny <Klaus.Malorny@knipp.de>)

9/25/2009
	- 2.0.7 released
	- Add support for detecting the configured nameservers on the Android